Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,16 @@ steps:
   - task: TerraformInstaller@0
     inputs:
       terraformVersion: 'latest'
+  
+  - task: TerraformCLI@0
+    inputs:
+     command: 'init'
   - task: TerraformCLI@0
     inputs:
       command: 'validate'
+      allowTelemetryCollection: true
+  - task: TerraformCLI@0
+    inputs:
+      command: 'plan'
+      runAzLogin: true
       allowTelemetryCollection: true
