--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,8 +8,13 @@ trigger:
 
 pool:
   vmImage: ubuntu-latest
-
 steps:
+  - task: AzureKeyVault@2
+    inputs:
+      azureSubscription: 'Subskrypcja programu Visual Studio Professional(2)(0ad5ac4a-b031-42a2-9fe5-5feb754f1822)'
+      KeyVaultName: 'prpu-az-vault'
+      SecretsFilter: 'client-secret'
+      RunAsPreJob: false
   - task: TerraformInstaller@0
     inputs:
       terraformVersion: 'latest'
